[package]
name = "v4l2"
version = "0.0.1"
authors = ["Alexandre Courbot <gnurou@gmail.com>"]
edition = "2018"
license = "LGPL-2.1"

[dependencies]
nix = "0.17.0"
bitflags = "1.2.1"
thiserror = "1.0"
anyhow = "1.0"

[dependencies.mio]
version = "0.7"
features = ["os-poll", "os-util"]

# For example programs
[dev-dependencies]
ctrlc = "3.1.4"
clap = "2.33"