[package]
name = "v4l2"
version = "0.0.1"
authors = ["Alexandre Courbot <gnurou@gmail.com>"]
edition = "2018"
license = "LGPL-2.1"

[dependencies]
libc = "0.2.79"
nix = "0.19.0"
bitflags = "1.2.1"
thiserror = "1.0"
anyhow = "1.0"

# For example programs
[dev-dependencies]
ctrlc = "3.1.4"
clap = "2.33"