[package]
name = "v4l2r"
version = "0.0.4"
authors = ["Alexandre Courbot <gnurou@gmail.com>"]
edition = "2021"
description = "Safe and flexible abstraction over V4L2"
repository = "https://github.com/Gnurou/v4l2r"
categories = ["os"]
keywords = ["v4l2", "video", "linux"]
license = "MIT"

readme.workspace = true

[dependencies]
nix = { version = "0.28", features = ["ioctl", "mman", "poll", "fs", "event"] }
bitflags = "2.4"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4.14"
enumn = "0.1.6"

[build-dependencies]
bindgen = "0.69"

# For example programs
[dev-dependencies]
ctrlc = "3.1.4"
clap = "3.2"
env_logger = "0.10"
v4l2r-utils = { path = "../utils" }
